[package]
name = "corvus"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "corvus"
path = "src/main.rs"

[dependencies]
# libthyla-rs provides _start + #[panic_handler] + SVC wrappers. corvus
# uses t_putstr (banner) + t_mlockall + t_set_dumpable + t_set_traceable
# + t_getrandom + t_explicit_bzero (the P5-corvus-syscalls hardening
# surface) + t_pipe/t_read/t_write/t_close (Spoor server I/O).
libthyla-rs = { path = "../lib/libthyla-rs" }

# Heap allocator -- required by Argon2id's working-memory matrix (inside
# corvus-crypto). linked_list_allocator is the no_std-standard. We back it
# with a static 24 MiB BSS buffer at startup; m_cost up to 16 MiB fits with
# headroom for state vec + ciphertext bookkeeping. Larger m_cost (sensitive
# preset = 1 GiB) is a future tuning move that requires re-sizing the BSS
# buffer. `use_spin` enables the LockedHeap wrapper (Heap + spinning_top
# mutex), required for the #[global_allocator] static.
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }

# corvus-crypto -- the shared crypto core (A-5c-b): the CRVS wrap layout +
# Argon2id KDF + AEGIS-256 AEAD + the hybrid keypair + the DEK envelope + the
# BIP-39 codec. Extracted from main.rs so the host-target corvus-mint and the
# on-device corvus produce/consume byte-identical wraps -- no second
# implementation to drift. The crypto crates (argon2 / aegis / ml-kem / kem /
# x25519-dalek / sha2) are its dependencies now, not corvus's; corvus drives
# it through the public API + a `ThylaRng` it supplies.
corvus-crypto = { path = "../lib/corvus-crypto" }

# rand_core 0.6 -- the RNG trait corvus-crypto's keypair/wrap functions take.
# corvus implements it over the kernel CSPRNG (`t_getrandom`) as `ThylaRng`
# and passes it in; default-features off so no `getrandom` backend is pulled.
rand_core = { version = "0.6", default-features = false }
