[package]
name = "cpubench"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "cpubench"
path = "src/main.rs"

[dependencies]
# TI-4d: a native libthyla-rs multi-modal scheduler/CPU bench. NO heavy deps
# (stays under SYS_SPAWN_BLOB_MAX -- not in build.sh::tls_strip_bins).
libthyla-rs = { path = "../lib/libthyla-rs" }
