# /bin/curl -- a native libthyla_rs HTTP + HTTPS GET client (net-utils).
#
# The general /net fetch tool: parses a URL, resolves the host via /net/cs,
# dials a `/net` `TcpStream` (http) or wraps it in the `tls` crate's `TlsStream`
# (https, validating the server cert against the baked CA bundle + the LS-K wall
# clock), issues an HTTP/1.0 GET, and prints the body. A native /net client: it
# touches no hardware (netd owns the NIC, I-5) and reaches only the `/net` +
# `/etc` its territory grants. Its own crate (not coreutils) so the heavy rustls
# `tls` dep does not bloat the ~50 coreutils bins.
[package]
name = "curl"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "curl"
path = "src/main.rs"

[dependencies]
libthyla-rs = { path = "../lib/libthyla-rs" }
tls = { path = "../lib/tls" }
