[package]
name = "fsbench"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "fsbench"
path = "src/main.rs"

[dependencies]
# A native libthyla-rs multi-modal FS throughput bench -- the in-guest end-to-end
# (kernel -> dev9p -> stratumd -> bdev -> virtio-blk -> pool) analog of netperf.
# NO heavy deps (stays under SYS_SPAWN_BLOB_MAX -- not in build.sh::tls_strip_bins).
libthyla-rs = { path = "../lib/libthyla-rs" }
