[package]
name = "hello-rs"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "hello-rs"
path = "src/main.rs"

[dependencies]
# libthyla-rs provides _start + #[panic_handler] + SVC wrappers (P4-Ic4
# extraction). hello-rs only needs t_putstr from this crate.
libthyla-rs = { path = "../lib/libthyla-rs" }
