[package]
name = "net-echo"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "net-echo"
path = "src/main.rs"

[dependencies]
libthyla-rs = { path = "../lib/libthyla-rs" }
# net-8c-2: a real TLS handshake over a live /net TcpStream (the TlsServerStream
# server side + the TlsStream client side, both over netd's resident loopback).
tls = { path = "../lib/tls" }
