# netdev-pci-test -- pci-2 boot probe: an ARP round-trip through the reusable
# netdev::VirtioNetPci driver (the net-1 proof, now over the virtio-pci-modern
# transport -- the #140 resolution). Spawned in joey's THYLA_BOOT_PROBES ladder
# PRE-stratumd, WITH CAP_HW_CREATE. The PCI NIC lives on its own page-aligned
# BAR (not the shared virtio-mmio page), so the co-residency limit net-1 hit
# does not apply -- but the probe still runs + exits cleanly before stratumd.

[package]
name = "netdev-pci-test"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
libthyla-rs = { path = "../lib/libthyla-rs" }
netdev = { path = "../lib/netdev" }
